# agent-workflow-comparison

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
agents/: __init__.py  base.py  llm_client.py  tool_dispatcher.py
config/: settings.py
data/csv/: customers.csv  inventory.csv  orders.csv  payments.csv  products.csv  revenue.csv
data/docs/: business_rules.md  data_dictionary.md  kpi_definitions.md
docs/: index.html
evaluation/: judge.py  metrics.py  reporter.py
results/: analysis_1776490910.md  analysis_1776502658.md  analysis_1776523313.md  analysis_1776593314.md  analysis_1776593422.md  analysis_1776593562.md  analysis_1776625827.md  blog_1776490919.md  blog_1776502658.md  blog_1776523313.md  blog_1776593422.md  blog_1776625828.md  report_1776490884.md  report_1776523300.md  report_1776593229.md  report_1776605362.md  report_1776625815.md
scripts/: analyze.py  benchmark_runner.py  blog.py  cli.py  generate_data.py  load_db.py  load_vectordb.py  plot_results.py
tasks/: __init__.py  definitions.py  task_registry.py
tests/: test_tasks.py  test_tools.py  test_tools_integration.py  test_workflows.py  test_workflows_week3.py
tools/: __init__.py  base.py  calculator.py  csv_reader.py  python_analysis.py  sql_query.py  vector_search.py
workflows/: __init__.py  _utils.py  base.py  chain.py  evaluator_optimizer.py  human_in_loop.py  manager_agent.py  multi_agent_handoff.py  orchestrator_workers.py  parallel.py  routing.py  single_step.py  tool_using.py
